--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  name: github
+  repo: peterparkz/murilopesr
+  branch: master
+  site_domain: murilopsr.netlify.app
 
 publish_mode: editorial_workflow
 
