--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,14 +4,14 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "content/blog/" # Media files will be stored in the repo under static/images/uploads
-public_folder: "content/blog/" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "/content/blog/" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/content/blog/" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
 
   - name: "posts" # Used in routes, e.g., /admin/collections/blog
     label: "Post" # Used in the UI
-    folder: "content/blog/" # The path to the folder where the documents are stored
+    folder: "/content/blog/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., DD-MM-YYYY-title.md
     fields: # The fields for each document, usually in front matter
@@ -62,7 +62,7 @@ collections:
         name: "coverImage"
         required: false
         widget: "image"
-        default: "/images/uploads/cover-post.jpg"
+        default: "/content/blog/"
         
       - label: "Body"
         name: "body"
