--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "${node.frontmatter.img.childImageSharp.fluid.src}" # Media files will be stored in the repo under static/images/uploads
+media_folder: "images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
@@ -62,7 +62,7 @@ collections:
         name: "coverImage"
         required: false
         widget: "image"
-        default: "/images/uploads/cover-post.jpg"
+        default: "${node.frontmatter.img.childImageSharp.fluid.src}"
         
       - label: "Body"
         name: "body"
