--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,16 +4,16 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
 
-  - name: "posts" # Used in routes, e.g., /admin/blog
+  - name: "posts" # Used in routes, e.g., /admin/collections/blog
     label: "Post" # Used in the UI
-    folder: "content/blog" # The path to the folder where the documents are stored
+    folder: "content/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{slug}}" # Filename template, e.g., DD-MM-YYYY-title.md
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
 
       - label: "Title"
@@ -57,13 +57,12 @@ collections:
         name: "thumbnailImage"
         required: false
         widget: "image"
-        default: "${node.frontmatter.img.childImageSharp.fluid.src}"        
 
       - label: "Cover Image"
         name: "coverImage"
         required: false
         widget: "image"
-        default: "${node.frontmatter.img.childImageSharp.fluid.src}"
+        default: "/images/uploads/cover-post.jpg"
         
       - label: "Body"
         name: "body"
